# ar3_ros

ar3_bringup/: package.xml
ar3_bringup/config/: ar3_joint_trajectory_publisher.yaml
ar3_bringup/launch/: ar3_base.launch.py  ar3_system_position_only.launch.py
ar3_test_nodes/: package.xml  setup.cfg  setup.py
ar3_test_nodes/ar3_test_nodes/: publisher_joint_trajectory_controller.py
